cloudbeaver/cloudbeaver-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  serviceName: cloudbeaver
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
        - image: dbeaver/cloudbeaver:latest
          name: cloudbeaver
          ports:
            - containerPort: 8978
          volumeMounts:
            - mountPath: /opt/cloudbeaver/workspace
              name: config
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/cloudbeaver
            server: 192.168.86.107
