cloudbeaver/cloudbeaver-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`db.albinmedoc.se`)
      kind: Rule
      services:
        - name: cloudbeaver
          port: 8978
